fix on mobile view

--- a/src/components/stepper/style.scss
+++ b/src/components/stepper/style.scss
@@ -14,7 +14,7 @@
 		margin-right: 67px;
 		position: relative;
 		@include mq-medium {
-			margin-right: 30px;
+			margin-right: 60px;
 		}
 		display: flex;
 		&:nth-last-child(1) {
